# ShowMIDI

./: .gitignore  CMakeLists.txt
Source/: Main.cpp  MainLayoutComponent.cpp  MidiDeviceComponent.cpp  PauseManager.h  PluginEditor.cpp  PortListComponent.cpp  Settings.h  SettingsComponent.h  SettingsManager.h  StandaloneDevicesComponent.cpp  StandaloneWindow.cpp  StandaloneWindow.h  UwynLookAndFeel.cpp  UwynLookAndFeel.h
cmake/: CPM.cmake
